# kinoquiz

./: pyproject.toml  requirements.txt
kinoquiz/: buttons.py  check.py  entities.py  layout.py  main.py  resources.py  screens.py  timer.py
svoja/: entities.py  main.py  timer.py
